@@ -2,33 +2,30 @@ package main;
 
 import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
+import java.io.FileReader;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.io.PrintStream;
+import java.io.Reader;
+import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
-import java.lang.reflect.Modifier;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Arrays;
+import java.nio.file.Paths;
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
-import java.util.function.BiFunction;
+import java.util.Scanner;
 
-import queries.CallingArg;
-import queries.Queries;
-import queries.Queries_Electricity_NoCust_UnrTopK;
-import queries.Queries_Electricity_NoCust_UnrTra;
-import queries.Queries_Electricity_Week_UnrTopK;
-import queries.Queries_Electricity_Week_UnrTra;
-import queries.Queries_Retail_UnrTopK;
-import queries.Queries_Retail_UnrTra;
-import queries.Queries_Toloker_UnrTopK;
-import queries.Queries_Toloker_UnrTra;
+import algorithmBuilder.AlgorithmBuilder;
+import algorithmBuilder.AlgorithmBuilderTransformed_topKPruning;
+import annotations.BuildsAlgorithm;
+import annotations.CallingArg;
+import queries.Queries2;
+import rq.common.algorithms.LazyRecursive;
+import rq.common.annotations.Algorithm;
 import rq.common.interfaces.LazyExpression;
 import rq.common.interfaces.TabularExpression;
-import rq.common.tools.Counter;
+import rq.common.tools.AlgorithmMonitor;
 import rq.files.io.LazyTable;
 import rq.files.io.TableWriter;
 import rq.common.interfaces.Table;
@@ -38,68 +35,9 @@ import rq.common.interfaces.Table;
  * @author Mgr. Radomir Skrabal
  *
  */
-public class Main {
-	
-	private static final String ALGORITHM_UNRESTRICTED = "unrestricted";
-	private static final String ALGORITHM_TOPK = "topK";
-	private static final String ALGORITHM_TRANSFORMED = "transformed";
-	
-	private static final List<String> ALGORITHMS = 
-			Arrays.asList(
-					ALGORITHM_UNRESTRICTED, 
-					ALGORITHM_TOPK, 
-					ALGORITHM_TRANSFORMED);
-	
-	private static List<Class<? extends Object>> qlist = Arrays.asList(
-			Queries_Electricity_NoCust_UnrTopK.class,
-			Queries_Electricity_NoCust_UnrTra.class,
-			Queries_Electricity_Week_UnrTopK.class,
-			Queries_Electricity_Week_UnrTra.class,
-			Queries_Retail_UnrTopK.class,
-			Queries_Retail_UnrTra.class,
-			Queries_Toloker_UnrTopK.class,
-			Queries_Toloker_UnrTra.class);
-	
-	private static Map<String, BiFunction<Queries.Algorithm, Counter, Queries>> queryMap = new HashMap<String, BiFunction<Queries.Algorithm, Counter, Queries>>();
-	
-	private static void addQueryFromQueriesClass(Class<? extends Object> clazz) {
-		CallingArg ann = clazz.getAnnotation(CallingArg.class);
-		if(ann == null) {
-			throw new RuntimeException(new StringBuilder()
-					.append("Class ")
-					.append(clazz.getName())
-					.append(" must be annotated with ")
-					.append(CallingArg.class.getName())
-					.append(" to be used as query source.")
-					.toString());
-		}
-		
-		final String factory = "factory";
-		try {
-			final Method m = clazz.getMethod(factory, Queries.Algorithm.class, Counter.class);
-			
-			if(	   m == null
-				|| !Modifier.isStatic(m.getModifiers())
-				|| !Queries.class.isAssignableFrom(m.getReturnType())) {
-					throw new RuntimeException(new StringBuilder()
-							.append("Class ")
-							.append(clazz.getName())
-							.append(" must implement static method ")
-							.append(factory)
-							.append(" to be used as query source.")
-							.toString());
-				}
-				Main.queryMap.put(ann.value(), (Queries.Algorithm a, Counter c) -> {
-					try {
-						return (Queries)m.invoke(null, a, c);
-					} catch (IllegalAccessException | IllegalArgumentException | InvocationTargetException e) {
-						throw new RuntimeException(e);
-					}
-				});
-		} catch (NoSuchMethodException | SecurityException e) {
-			throw new RuntimeException(e);
-		}
-	}
+public class Main {	
+	private static final String STATHEADER = "statheader";
+	private static final String ARGS_FILE_SWITCH = "-argsFile";
 	
 	/**
 	 * path to input file
@@ -110,55 +48,90 @@ public class Main {
 	 */
 	private static String usage() {
 		return new StringBuilder()
-				.append("java -jar rq.front.jar <QUERY_NAME> <ALGORITHM> <INPUT FILE PATH>\n")
-				.append("ALGORITHM = ").append(ALGORITHMS.stream().reduce((f, s) -> new StringBuilder().append(f).append("|").append(s).toString()).get())
+				.append("Runs the experiment\n")
+				.append("java -jar rq.front.jar (QUERY_NAME) (ALGORITHM) (INPUT FILE PATH) [QUERY_ARGS...]\n")
+				.append("ALGORITHM = ").append(AlgorithmBuilderTransformed_topKPruning.ALGORTIHMS_HELP)
 				.append("\n")
-				.append("QUERY_NAME = ").append(qlist.stream()
-						.map((Class<? extends Object> clazz) -> clazz.getAnnotation(CallingArg.class).value())
-						.reduce((f, s) -> new StringBuilder().append(f).append("|").append(s).toString()).get())
-				.append("\n")
+				.append("QUERY_NAME = ").append(Queries2.QUERIES_HELP)
+				.append("\n\n")
+				.append("Prints header for the .stat files concatenation\n")
+				.append("java -jar rq.front.jar ").append(STATHEADER)
 				.toString();
 	}
 	
-	private static Queries.Algorithm parseAlgorithm(String algStr){
-		switch(algStr) {
-		case ALGORITHM_UNRESTRICTED:
-			return Queries.Algorithm.Unrestricted;
-		case ALGORITHM_TOPK:
-			return Queries.Algorithm.TopK;
-		case ALGORITHM_TRANSFORMED:
-			return Queries.Algorithm.Transformed;
-		}
-		throw new RuntimeException("Algorithm " + algStr + " not recognized");
+	@SuppressWarnings("unchecked")
+	private static Class<? extends LazyRecursive> parseAlgorithm(String algStr){
+		Class<?> clazz = AlgorithmBuilder.BUILDERS.stream()
+				.filter(c -> {
+					BuildsAlgorithm ba = c.getAnnotation(BuildsAlgorithm.class);
+					
+					if(ba != null) {
+						Algorithm a = ba.value().getAnnotation(Algorithm.class);
+						return a.value().equals(algStr);
+					}
+					return false;
+				})
+				.map(c -> {
+					BuildsAlgorithm ba = c.getAnnotation(BuildsAlgorithm.class);
+					return ba.value();
+				}).findAny().get();
+		
+		return (Class<? extends LazyRecursive>)clazz;					
 	}
 	
-	private static Queries parseQuery(String qStr, Counter counter, Queries.Algorithm algorithm) {
-		BiFunction<Queries.Algorithm, Counter, Queries> constructor = queryMap.get(qStr);
-		return constructor.apply(algorithm, counter);
+	private static Queries2 parseQuery(String qStr, AlgorithmMonitor monitor, Class<? extends LazyRecursive> algorithm) {
+		try {
+			Class<? extends Queries2> clazz;
+				
+			clazz = Queries2.QUERIES.stream().filter(c -> {
+				CallingArg ca = c.getAnnotation(CallingArg.class);
+				return ca.value().equals(qStr);
+			}).findAny().get();
+			Constructor<? extends Queries2> cons = null;
+			cons = clazz.getConstructor(Class.class, AlgorithmMonitor.class);
+			Queries2 instance = cons.newInstance(algorithm, monitor);
+			return instance;
+		} catch (NoSuchMethodException | SecurityException | InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException e) {
+			throw new RuntimeException(e);
+		}
+		
 	}
 	
 	private static Main parseArgs(String[] args) {
-		Counter counter = new Counter();
-		Queries.Algorithm alg = parseAlgorithm(args[1]);
-		Queries queries = parseQuery(args[0], counter, alg);
-		return new Main(Path.of(args[2]), queries, counter);
+		AlgorithmMonitor monitor = new AlgorithmMonitor();
+		Class<? extends LazyRecursive> alg = parseAlgorithm(args[1]);
+		Queries2 queries = parseQuery(args[0], monitor, alg);
+		
+		Map<String, String> queryArgsMap = null;
+		if(args.length == 5 && args[3].equals(ARGS_FILE_SWITCH)) {
+			queryArgsMap = Main.parseQueryArgFile(Paths.get(args[4]));
+		}
+		else {
+			queryArgsMap = new HashMap<String, String>();
+			for(int i = 3; i < args.length; i++) {
+				parseQueryArg(args[i], queryArgsMap);
+			}
+		}
+		
+		return new Main(Path.of(args[2]), queries, monitor, queryArgsMap);
 	}
 	
 	/**
 	 * Provides queries for the measurement
 	 */
-	private final Queries queries;
+	private final Queries2 queries;
 	
 	private long loadTime = 0;
 	private long queryTime = 0;
-	private long outputTime = 0;
+	private long postprocessTime = 0;
 	private long preparationTime = 0;
-	private Counter recordCounter;
+	private AlgorithmMonitor monitor = null;
 	
-	private Main(Path path, Queries queries, Counter recordCounter) {
+	private Main(Path path, Queries2 queries, AlgorithmMonitor monitor, Map<String, String> queryArgsMap) {
 		this.path = path;
 		this.queries = queries;
-		this.recordCounter = recordCounter;
+		this.queries.setQueryParameters(queryArgsMap);
+		this.monitor = monitor;
 	}
 	
 	/**
@@ -209,7 +182,7 @@ public class Main {
 		
 		LazyTable iTable = LazyTable.open(this.path);
 		LazyExpression prep = 
-				this.queries.prepare(iTable);
+				this.queries.preprocess(iTable);
 		Table prepped = LazyExpression.realizeMapped(prep, 1_000_000);
 		
 		long end = System.currentTimeMillis();
@@ -222,14 +195,13 @@ public class Main {
 		end = System.currentTimeMillis();
 		this.queryTime = end - start;
 		
-		
 		TabularExpression postProcess = 
 				this.queries.postprocess(oTable);
 		
 		start = System.currentTimeMillis();
 		oTable = postProcess.eval();
 		end = System.currentTimeMillis();
-		this.outputTime = end - start;
+		this.postprocessTime = end - start;
 		
 		OutputStream dataOutputStream = this.openDataOutputStream();
 		this.flushData(oTable, dataOutputStream);
@@ -242,18 +214,78 @@ public class Main {
 		System.out.println("Processing finished.\n");
 	}
 	
+	private static void statHeader() {
+		String s = new StringBuilder()
+				.append("query")
+				.append(",")
+				.append("algorithm")
+				.append(",")
+				.append("load-time")
+				.append(",")
+				.append("preprocess-time")
+				.append(",")
+				.append("query-time")
+				.append(",")
+				.append("postprocess-time")
+				.append(",")
+				.append("tuples-generated")
+				.append(",")
+				.append("result-candidates")
+				.append(",")
+				.append("query-parameters")
+				.append("\n")
+				.toString();
+		System.out.print(s);
+	}
+	
 	private void outputStatistic(PrintStream output) {
-		output.println("Data load time(ms): " + this.loadTime);
-		output.println("Data preparation time(ms): " + this.preparationTime);
-		output.println("Query execution time(ms): " + this.queryTime);
-		output.println("Postprocess time(ms): " + this.outputTime);
-		output.println("Tuples generated: " + this.recordCounter.count());
+		String s = new StringBuilder()
+				.append(this.queries.getClass().getAnnotation(CallingArg.class).value())
+				.append(",")
+				.append(this.queries.algorithm())
+				.append(",")
+				.append(this.loadTime)
+				.append(",")
+				.append(this.preparationTime)
+				.append(",")
+				.append(this.queryTime)
+				.append(",")
+				.append(this.postprocessTime)
+				.append(",")
+				.append(this.monitor.generatedTuples.count())
+				.append(",")
+				.append(this.monitor.resultCandidates.count())
+				.append(",")
+				.append(this.queries.parameterString())
+				.toString();
+		
+		output.println(s);
 	}
 	
 	private static boolean validateArgs(String[] args) {
-		return Main.queryMap.keySet().contains(args[0])
-				&& Main.ALGORITHMS.contains(args[1])
-				&& Files.exists(Path.of(args[2]));
+		return Files.exists(Path.of(args[2]))
+				&& Queries2.QUERIES_NAMES.contains(args[0])
+				&& AlgorithmBuilder.ALGORITHM_LIST.contains(args[1]);
+	}
+	
+	private static Map<String, String> parseQueryArg(String arg, Map<String, String> map){
+		String[] strs = arg.split("=");
+		map.put(strs[0], strs[1]);
+		return map;
+	}
+	
+	private static Map<String, String> parseQueryArgFile(Path path){
+		try {
+			Scanner scanner = new Scanner(path.toFile());
+			Map<String, String> argMap = new HashMap<String, String>();
+			
+			while(scanner.hasNextLine()) {
+				argMap = parseQueryArg(scanner.nextLine(), argMap);
+			}
+			return argMap;
+		} catch (FileNotFoundException e) {
+			throw new RuntimeException(e);
+		}
 	}
 
 	/**
@@ -261,10 +293,13 @@ public class Main {
 	 * @param args program arguments
 	 * @throws IOException 
 	 */
-	public static void main(String[] args) throws IOException {
-		Main.qlist.forEach(c -> Main.addQueryFromQueriesClass(c));
+	public static void main(String[] args) throws IOException {	
+		if(args.length == 1 && args[0].equals(STATHEADER)) {
+			statHeader();
+			return;
+		}
 		
-		if(!(args.length == 3
+		if(!(args.length >= 3
 				&& validateArgs(args))){
 			System.out.println(usage());
 			return;
